# cli-podojo

./: CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/podojo_cli/: client.py  config.py  main.py  version_check.py
src/podojo_cli/commands/: aiinterviews.py  auth.py  gdrive.py  interviews.py  projects.py  sessions.py  showreel.py  synth.py  transcripts.py  usertests.py  videos.py
src/podojo_cli/gdrive/: list.py  upload.py
src/podojo_cli/synth/: __init__.py  driver.py  session.py
src/podojo_cli/video/: showreel.py
tests/: conftest.py  test_aiinterviews.py  test_auth.py  test_gdrive.py  test_interviews.py  test_projects.py  test_sessions.py  test_showreel.py  test_transcripts.py  test_usertests.py
