[project]
name = "podojo-cli"
version = "0.2.1"
description = "CLI for the Podojo user research platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15",
    "httpx>=0.28",
    "rich>=13.0",
    "pyyaml>=6.0",
    "google-auth>=2.0",
    "google-api-python-client>=2.0",
]

[project.scripts]
podojo = "podojo_cli.main:app"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-httpx>=0.35"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/podojo_cli"]
