[project]
name = "podojo-cli"
version = "0.9.0"
description = "CLI for the Podojo user research platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Jochen Ade", email = "jochen.ade@podojo.com" }]
keywords = ["podojo", "ux-research", "user-research", "cli", "transcripts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.15",
    "httpx>=0.28",
    "rich>=13.0",
    "pyyaml>=6.0",
    "keyring>=25.0",
]

[project.optional-dependencies]
synth = ["playwright>=1.40"]

[project.urls]
Homepage = "https://github.com/podojo/cli-podojo"
Source = "https://github.com/podojo/cli-podojo"
Issues = "https://github.com/podojo/cli-podojo/issues"
Changelog = "https://github.com/podojo/cli-podojo/blob/main/CHANGELOG.md"

[project.scripts]
podojo = "podojo_cli.main:app"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-httpx>=0.35"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/podojo_cli"]
